# bridge_python

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  Dockerfile  HA_INTEGRATION.md  PLANO.md  README.md  build.bat  build.sh  config.sh  config.yaml  diagram.json  discover_bridge.py  docker-compose.yml  docker-exec.bat  erase.bat  erase.sh  flash.bat  flash.ps1  flash.sh  flashOta.sh  homeassistant.bat  monitor.bat  monitor.py  monitor.sh  opencode.bat  opencode.jsonc  platformio.ini  reconfigure.sh  run.sh  run_host.sh  scan.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  serial_probe.sh  setup.sh  setup_mqtt.sh  simple_serial.sh  (+2 more)
.devcontainer/: devcontainer.json
.opencode/: opencode.json
app/: http_api.py  mqtt_discovery.py
bridge_python/: Dockerfile  HA_INTEGRATION.md  README.md  config.yaml  install_addon.sh  requirements.txt  run.sh  run_host.sh
common/: comum.h
esp32_bridge_python/: install_addon.sh
homeassistant_config/: home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
logs/: comissionamento.txt  pos-comissionamento.txt
main/: CMakeLists.txt  app_bridge.cpp  app_bridge.h  app_console.cpp  app_console.h  app_device_registry.cpp  app_device_registry.h  app_driver.cpp  app_main.cpp  app_priv.h  app_reset.h  app_rmaker_gateway.cpp  app_rmaker_gateway.h  app_wifi_config.cpp  app_wifi_config.h  app_wifi_server.cpp  app_wifi_server.h  idf_component.yml  main.cpp
main/web/: dashboard.css  dashboard.html
matter/: CMakeLists.txt  README.md  sdkconfig
rainmaker/: CMakeLists.txt  Dockerfile  build.bat  (+5 more)
(+140 files in other folders)
